# template

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  run.sh  setup-service.sh  update-deployment.sh
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 01753072bfa8_add_conversation_and_message_models.py
backend/app/: config.py  main.py
backend/app/database/: models.py
backend/app/functions/: email.py
backend/app/middleware/: auth.py  errors.py
backend/app/pages/: chat.py  dashboard.py
backend/app/pages/auth/: google.py  login.py  logout.py  me.py  register.py  reset.py  utils.py
backend/app/scripts/: export_openapi.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: routeTree.gen.ts
frontend/src/components/chat/: ChatMessage.tsx  ChatSidebar.tsx
frontend/src/components/layout/: navbar.tsx
frontend/src/components/ui/: theme-toggle.tsx
frontend/src/lib/: api.ts  openapi-types.ts  types.ts  utils.ts
frontend/src/routes/: __root.tsx  chat.tsx  index.tsx
frontend/src/routes/auth/login/: index.tsx
frontend/src/routes/auth/register/: index.tsx
frontend/src/routes/auth/reset/: index.tsx
frontend/src/routes/dashboard/: index.tsx
